--- a/app/views/psd-revised-flow/consignment-ref/edit-general-customs-codes-2.html
+++ b/app/views/psd-revised-flow/consignment-ref/edit-general-customs-codes-2.html
@@ -27,7 +27,7 @@ href: "#"
 
                 <div class="govuk-hint govuk-!-margin-bottom-5" id="customs_code-hint">
                     <span class="govuk-!-display-block govuk-!-margin-bottom-2">
-                        You can add and edit customs codes for Asda washing up liquid. For example, a <abbr>CN</abbr> code (8 digits) or a TARIC code (10 digits).
+                        Add and edit customs codes for Asda washing up liquid. For example, a <abbr>CN</abbr> code (8 digits) or a TARIC code (10 digits).
                     </span>
 
                     <span class="govuk-!-display-block govuk-!-font-size-16">
