--- a/app/views/psd-revised-flow/consignment-ref/edit-ucr-codes-4.html
+++ b/app/views/psd-revised-flow/consignment-ref/edit-ucr-codes-4.html
@@ -47,7 +47,7 @@ href: "edit-ucr-codes-3"
 
                     <div class="govuk-hint govuk-!-margin-bottom-5" id="ucr-number-hint">
                         <span class="govuk-!-display-block govuk-!-margin-bottom-2">
-                            You can add and edit <abbr>UCR</abbr> numbers for Asda washing up liquid. Manually deleting a number will remove it from the case.
+                            Add and edit <abbr>UCR</abbr> numbers for Asda washing up liquid.
                         </span>
 
                         <span class="govuk-!-display-block govuk-!-font-size-16">
@@ -60,6 +60,7 @@ href: "edit-ucr-codes-3"
                             <abbr>UCR</abbr> number: 1
                         </label>
                         <input class="govuk-input govuk-!-width-three-quarters" id="ucr-number-1" name="ucr-number-1" type="text" maxlength="45" value="123456789">
+                        <a href="remove-pg.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16">Remove <span class="govuk-visually-hidden"><abbr>UCR</abbr> number 1</span></a>
                     </div>
 
                     <div class="govuk-form-group">
@@ -67,6 +68,7 @@ href: "edit-ucr-codes-3"
                             <abbr>UCR</abbr> number: 2
                         </label>
                         <input class="govuk-input govuk-!-width-three-quarters" id="ucr-number-2" name="ucr-number-2" type="text" maxlength="45" value="223456789">
+                        <a href="remove-pg.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16">Remove <span class="govuk-visually-hidden"><abbr>UCR</abbr> number 2</span></a>
                     </div>
 
                     <div class="govuk-form-group">
@@ -74,6 +76,7 @@ href: "edit-ucr-codes-3"
                             <abbr>UCR</abbr> number: 3
                         </label>
                         <input class="govuk-input govuk-!-width-three-quarters" id="ucr-number-3" name="ucr-number-3" type="text" maxlength="45" value="">
+                        <a href="remove-pg.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16">Remove <span class="govuk-visually-hidden"><abbr>UCR</abbr> number 3</span></a>
                     </div>
 
                 </fieldset>
