--- a/app/views/psd-revised-flow/consignment-ref/edit-ucr-codes-5.html
+++ b/app/views/psd-revised-flow/consignment-ref/edit-ucr-codes-5.html
@@ -17,7 +17,7 @@ href: "#"
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-        <form action="customs-codes-01-success-4" method="post" novalidate>
+        <form action="#" method="post" novalidate>
 
             <div class="govuk-form-group">
                 <fieldset class="govuk-fieldset" aria-describedby="ucr-number-hint">
@@ -30,7 +30,7 @@ href: "#"
 
                     <div class="govuk-hint govuk-!-margin-bottom-5" id="ucr-number-hint">
                         <span class="govuk-!-display-block govuk-!-margin-bottom-2">
-                            You can add and edit <abbr>UCR</abbr> numbers for Asda washing up liquid. Manually deleting a number will remove it from the case.
+                            Add and edit <abbr>UCR</abbr> numbers for Asda washing up liquid.
                         </span>
 
                         <span class="govuk-!-display-block govuk-!-font-size-16">
@@ -43,6 +43,7 @@ href: "#"
                             <abbr>UCR</abbr> number: 1
                         </label>
                         <input class="govuk-input govuk-!-width-three-quarters" id="ucr-number-1" name="ucr-number-1" type="text" maxlength="45" value="123456789">
+                        <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16">Remove <span class="govuk-visually-hidden"><abbr>UCR</abbr> number 1</span></a>
                     </div>
 
                     <div class="govuk-form-group">
@@ -50,6 +51,7 @@ href: "#"
                             <abbr>UCR</abbr> number: 2
                         </label>
                         <input class="govuk-input govuk-!-width-three-quarters" id="ucr-number-2" name="ucr-number-2" type="text" maxlength="45" value="223456789">
+                        <a href="remove-pg.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16">Remove <span class="govuk-visually-hidden"><abbr>UCR</abbr> number 2</span></a>
                     </div>
 
                     <div class="govuk-form-group">
@@ -57,6 +59,7 @@ href: "#"
                             <abbr>UCR</abbr> number: 3
                         </label>
                         <input class="govuk-input govuk-!-width-three-quarters" id="ucr-number-3" name="ucr-number-3" type="text" maxlength="45" value="323456789">
+                        <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16">Remove <span class="govuk-visually-hidden"><abbr>UCR</abbr> number 3</span></a>
                     </div>
 
                 </fieldset>
