--- a/app/views/psd-revised-flow/consignment-ref/edit-ucr-codes-2.html
+++ b/app/views/psd-revised-flow/consignment-ref/edit-ucr-codes-2.html
@@ -30,7 +30,7 @@ href: "#"
 
                     <div class="govuk-hint govuk-!-margin-bottom-5" id="ucr-number-hint">
                         <span class="govuk-!-display-block govuk-!-margin-bottom-2">
-                            You can add and edit <abbr>UCR</abbr> numbers for Asda washing up liquid. Manually deleting a number will remove it from the case.
+                            Add and edit <abbr>UCR</abbr> numbers for Asda washing up liquid.
                         </span>
 
                         <span class="govuk-!-display-block govuk-!-font-size-16">
@@ -43,6 +43,8 @@ href: "#"
                             <abbr>UCR</abbr> number: 1
                         </label>
                         <input class="govuk-input govuk-!-width-three-quarters" id="ucr-number-1" name="ucr-number-1" type="text" maxlength="45" value="123456789">
+                        <a href="remove-pg.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16">Remove <span class="govuk-visually-hidden"><abbr>UCR</abbr> number 1</span></a>
+                        <!--button class="govuk-!-font-size-16 opss-button-link">Remove <span class="govuk-visually-hidden">number 1</span></span></button-->
                     </div>
 
                 </fieldset>
