--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -259,7 +259,7 @@ $opss-retired-bg: govuk-tint(govuk-colour("light-grey"), 50);
   }
 }
 
-/* ul.opss-radio-list {
+ul.opss-radio-list {
   margin-bottom: 0;
 
   li {
@@ -275,7 +275,7 @@ $opss-retired-bg: govuk-tint(govuk-colour("light-grey"), 50);
       }
     }
   }
-} */
+}
 
 .opss-radios-thumbnails {
   .govuk-radios__item {
