update to ucr prototype

--- a/app/views/psd-revised-flow/consignment-ref/edit-ucr-codes-2.html
+++ b/app/views/psd-revised-flow/consignment-ref/edit-ucr-codes-2.html
@@ -43,7 +43,7 @@ href: "#"
                             <abbr>UCR</abbr> number: 1
                         </label>
                         <input class="govuk-input govuk-!-width-three-quarters" id="ucr-number-1" name="ucr-number-1" type="text" maxlength="45" value="123456789">
-                        <a href="remove-pg.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16">Remove <span class="govuk-visually-hidden"><abbr>UCR</abbr> number 1</span></a>
+                        <a href="remove-pg-1.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16">Remove <span class="govuk-visually-hidden"><abbr>UCR</abbr> number 1</span></a>
                         <!--button class="govuk-!-font-size-16 opss-button-link">Remove <span class="govuk-visually-hidden">number 1</span></span></button-->
                     </div>
 
