--- a/app/views/psd-revised-flow/consignment-ref/edit-ucr-codes-5.html
+++ b/app/views/psd-revised-flow/consignment-ref/edit-ucr-codes-5.html
@@ -51,7 +51,7 @@ href: "#"
                             <abbr>UCR</abbr> number: 2
                         </label>
                         <input class="govuk-input govuk-!-width-three-quarters" id="ucr-number-2" name="ucr-number-2" type="text" maxlength="45" value="223456789">
-                        <a href="remove-pg.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16">Remove <span class="govuk-visually-hidden"><abbr>UCR</abbr> number 2</span></a>
+                        <a href="remove-pg-2.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16">Remove <span class="govuk-visually-hidden"><abbr>UCR</abbr> number 2</span></a>
                     </div>
 
                     <div class="govuk-form-group">
