--- a/app/views/psd-revised-flow/consignment-ref/edit-ucr-codes-2.html
+++ b/app/views/psd-revised-flow/consignment-ref/edit-ucr-codes-2.html
@@ -57,7 +57,7 @@ href: "#"
                 <!-- hyperlink used for secondary btn here for "prototype"-->
                 <a class="govuk-button govuk-button--secondary" href="edit-ucr-codes-3" role="button">Save and add another</a>
 
-                <a class="govuk-link govuk-link--no-visited-state" href="customs-codes-01.html">Cancel</a>
+                <a class="govuk-link govuk-link--no-visited-state" href="edit-ucr-codes-2.html">Cancel</a>
             </div>
 
         </form>
