--- a/app/views/psd-revised-flow/consignment-ref/edit-ucr-codes-2.html
+++ b/app/views/psd-revised-flow/consignment-ref/edit-ucr-codes-2.html
@@ -7,7 +7,7 @@ Edit the Unique Consignment Reference numbers
 {% block beforeContent %}
 {{ govukBackLink({
 text: "Back",
-href: "#"
+href: "customs-codes-01-success-2-std"
 }) }}
 {% endblock %}
 
