--- a/app/views/recall/select-image-pg.html
+++ b/app/views/recall/select-image-pg.html
@@ -1,7 +1,7 @@
 {% extends "recall.html" %}
 
 {% block pageTitle %}
-Edit the Product Recalls and Alerts information
+Select the image to include
 {% endblock %}
 
 
@@ -72,7 +72,7 @@ Edit the Product Recalls and Alerts information
 
             <div class="govuk-button-group">
                 <button class="govuk-button" data-module="govuk-button">
-                    Save and continue
+                    Continue
                 </button>
                 <a href="edit-content-pg.html" class="govuk-link govuk-link--no-visited-state">Skip</a>
             </div>
