--- a/app/views/recall/start-pg.html
+++ b/app/views/recall/start-pg.html
@@ -11,7 +11,7 @@ Edit the Product Recalls and Alerts information
 <!-- The information below is required by the Product Recalls and Alerts digital service. You can add it to the PSD case and then refresh this page. -->
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+    <div class="govuk-grid-column-three-quarters">
 
         <h1 class="govuk-heading-l">
             Preparing product recall information
