recall site pages

--- a/app/views/recall/select-image-pg.html
+++ b/app/views/recall/select-image-pg.html
@@ -8,8 +8,6 @@ Select the image to include
 
 {% block content %}
 
-
-
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-three-quarters">
 
@@ -19,7 +17,7 @@ Select the image to include
                 <fieldset class="govuk-fieldset">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l govuk-!-margin-bottom-8">
                         <h1 class="govuk-fieldset__heading">
-                            Select the image to include
+                            Select the images to include
                         </h1>
                     </legend>
 
