--- a/app/views/recall/start-pg.html
+++ b/app/views/recall/start-pg.html
@@ -8,8 +8,6 @@ Edit the Product Recalls and Alerts information
 
 {% block content %}
 
-<!-- The information below is required by the Product Recalls and Alerts digital service. You can add it to the PSD case and then refresh this page. -->
-
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-three-quarters">
 
@@ -34,7 +32,7 @@ Edit the Product Recalls and Alerts information
     <div class="govuk-grid-column-three-quarters">
 
         <p class="govuk-body">
-            This tool provides a convenient process for porting information from the <abbr>PSD</abbr> to the Product Recalls and Alerts digital service. You can add or edit information and transform it into the required Markdown format, ready to &lsquo;copy and paste&rsquo; directly into the recall service.
+            This tool provides a convenient process for porting information from the <abbr>PSD</abbr> to the Product Recalls and Alerts digital service. It will generate a <abbr title="Portable Document Format">PDF</abbr> version (with product images) and you can add or edit information before transforming it into the required Markdown format, ready to &lsquo;copy and paste&rsquo; directly into the recall service.
         </p>
 
 
@@ -50,7 +48,7 @@ Edit the Product Recalls and Alerts information
                     Product
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Dyson Extreme Clean 2000z (psd-345)
+                    Dyson Extreme Clean 2000z <span class="govuk-!-font-weight-regular govuk-!-font-size-16 govuk-!-padding-left-2 opss-no-wrap">(psd-345)</span>
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
@@ -58,11 +56,11 @@ Edit the Product Recalls and Alerts information
                     Case(s)
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Dyson vacuum 2000z catching fire (2305-0011)
+                    Dyson vacuum 2000z catching fire <span class="govuk-!-font-weight-regular govuk-!-font-size-16 govuk-!-padding-left-2 opss-no-wrap">(2305-0011)</span>
 
                     <!--ul class="govuk-list govuk-list--bullet">
-                        <li>Dyson vacuum 2000z catching fire (2305-0011)</li>
-                        <li>Dyson 2000z over-heating (2405-6507)</li>
+                        <li>Dyson vacuum 2000z catching fire <span class="govuk-!-font-weight-regular govuk-!-font-size-16 govuk-!-padding-left-2 opss-no-wrap">(2305-0011)</span></li>
+                        <li>Dyson 2000z over-heating <span class="govuk-!-font-weight-regular govuk-!-font-size-16 govuk-!-padding-left-2 opss-no-wrap">(2405-6507)</span></li>
                     </ul-->
 
                 </dd>
