--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -463,21 +463,27 @@ samp {
   text-underline-offset: .1em;
 }
 
-.opss-download-link-sm {
+span.opss-download-link-sm {
   @include down-load-link(rgba($govuk-link-colour, .9), 16);
   width: 10px;
   height: 10px;
   margin-right: 5px;
 }
 
-.opss-download-link-m {
+span.opss-download-link-m {
   @include down-load-link(rgba($govuk-link-colour, .9), 20);
   width: 17px;
   height: 17px;
   margin-right: 5px;
-
   position: relative;
   top: 2px;
+}
+
+a.opss-download-link-m {
+  @include down-load-link(rgba($govuk-link-colour, .9), 20);
+  background-position: left;
+  background-size: auto;
+  padding-left: 25px;
 }
 
 .opss-2-col-flow,
