--- a/app/views/recall/edit-content-pg.html
+++ b/app/views/recall/edit-content-pg.html
@@ -1,14 +1,12 @@
 {% extends "recall.html" %}
 
 {% block pageTitle %}
-Edit the product recall information
+The product recall information
 {% endblock %}
 
 
 
 {% block content %}
-
-
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-three-quarters">
@@ -28,6 +26,13 @@ Edit the product recall information
         </h2>
 
         <form action="end-pg.html" novalidate>
+
+            <div class="govuk-form-group">
+                <label class="govuk-label" for="title">
+                    <abbr title="Portable Document Format">PDF</abbr> title
+                </label>
+                <input class="govuk-input" id="title" name="title" type="text" value="Dyson Extreme Clean 2000z">
+            </div>
 
             <div class="govuk-form-group">
                 <label class="govuk-label" for="alert-number">
@@ -85,7 +90,7 @@ Edit the product recall information
                     Product identifiers
                 </label>
                 <div class="govuk-hint govuk-!-font-size-16" id="identifiers-hint">
-                    This includes the barcode and other product identifiers such as serial numbers, Amazon <abbr>ID</abbr> (<abbr>ASIN</abbr>) and eBay <abbr>ID</abbr> numbers.
+                    This can include barcodes, model names, <abbr title="Stock Keeping Unit">SKU</abbr> numbers, article numbers and various serial numbers such as Amazon <abbr>ID</abbr> (<abbr>ASIN</abbr>) and eBay <abbr>ID</abbr> numbers.
                 </div>
                 <textarea class="govuk-textarea" id="identifiers" name="identifiers" rows="10" aria-describedby="identifiers-hint"></textarea>
             </div>
@@ -547,7 +552,7 @@ Edit the product recall information
                                 <label class="govuk-label govuk-visually-hidden" for="other-detail">
                                     Other - detail
                                 </label>
-                                <input class="govuk-input" id="other-detail" name="other-detail" type="text">
+                                <textarea class="govuk-textarea" id="other-detail" name="other-detail" rows="5"></textarea>
                             </div>
                         </div>
                     </div>
@@ -563,16 +568,192 @@ Edit the product recall information
 
                     <div class="govuk-radios govuk-radios--small govuk-radios--inline" data-module="govuk-radios">
                         <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="marketplace-y" name="marketplace" type="radio" value="yes">
-                            <label class="govuk-label govuk-radios__label" for="marketplace-y">
-                                Yes
-                            </label>
-                        </div>
-                        <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="marketplace-n" name="marketplace" type="radio" value="no" checked>
                             <label class="govuk-label govuk-radios__label" for="marketplace-n">
                                 No
                             </label>
+                        </div>
+                        <div class="govuk-radios__item">
+                            <input class="govuk-radios__input" id="marketplace-y" name="marketplace" type="radio" value="yes" data-aria-controls="marketplaces">
+                            <label class="govuk-label govuk-radios__label" for="marketplace-y">
+                                Yes
+                            </label>
+                        </div>
+                        <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="marketplaces">
+                            <div class="govuk-form-group">
+
+                                <div class="govuk-grid-row">
+                                    <div class="govuk-grid-column-one-half govuk-!-padding-right-0">
+
+                                        <div class="govuk-checkboxes govuk-checkboxes--small">
+
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-1" name="market" type="checkbox" value="marketplace-1">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-1">
+                                                    Amazon.co.uk
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-2" name="market" type="checkbox" value="marketplace-2">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-2">
+                                                    eBay.co.uk
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-3" name="market" type="checkbox" value="marketplace-3">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-3">
+                                                    Aliexpress.com
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-4" name="organisation" type="checkbox" value="marketplace-4">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-4">
+                                                    Wish.com
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-5" name="market" type="checkbox" value="marketplace-5">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-5">
+                                                    Etsy.com
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-6" name="market" type="checkbox" value="marketplace-6">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-6">
+                                                    folksy.com
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-7" name="market" type="checkbox" value="marketplace-7">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-7">
+                                                    fruugo.co.uk
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-8" name="organisation" type="checkbox" value="marketplace-8">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-8">
+                                                    onbuy.com/gb/
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-9" name="market" type="checkbox" value="marketplace-9">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-9">
+                                                    en-gb.facebook.com/marketplace/
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-10" name="market" type="checkbox" value="marketplace-10">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-10">
+                                                    notonthehighstreet.com
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-11" name="market" type="checkbox" value="marketplace-11">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-11">
+                                                    manomano.co.uk
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-12" name="market" type="checkbox" value="marketplace-12">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-12">
+                                                    pinterest.co.uk/
+                                                </label>
+                                            </div>
+
+                                        </div>
+
+                                    </div>
+                                    <div class="govuk-grid-column-one-half govuk-!-padding-right-0">
+
+                                        <div class="govuk-checkboxes govuk-checkboxes--small" data-module="govuk-checkboxes">
+
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-13" name="market" type="checkbox" value="marketplace-13">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-13">
+                                                    wayfair.co.uk
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-14" name="market" type="checkbox" value="marketplace-14">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-14">
+                                                    houzz.co.uk/products
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-15" name="organisation" type="checkbox" value="marketplace-15">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-15">
+                                                    gumtree.com
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-16" name="market" type="checkbox" value="marketplace-16">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-16">
+                                                    shpock.com/en-gb
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-17" name="market" type="checkbox" value="marketplace-17">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-17">
+                                                    stockx.com
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-18" name="market" type="checkbox" value="marketplace-18">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-18">
+                                                    vinted.co.uk
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-19" name="organisation" type="checkbox" value="marketplace-19">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-19">
+                                                    shein.co.uk/
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-20" name="market" type="checkbox" value="marketplace-20">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-20">
+                                                    farfetch.com/uk/
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-21" name="market" type="checkbox" value="marketplace-21">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-21">
+                                                    Depop.com
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-22" name="market" type="checkbox" value="marketplace-22">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-22">
+                                                    Marketplace.asos.com
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-23" name="market" type="checkbox" value="marketplace-23">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-23">
+                                                    zalando.co.uk
+                                                </label>
+                                            </div>
+                                            <div class="govuk-checkboxes__item">
+                                                <input class="govuk-checkboxes__input" id="marketplace-24" name="market" type="checkbox" value="marketplace-24">
+                                                <label class="govuk-label govuk-checkboxes__label" for="marketplace-24">
+                                                    AbeBooks.co.uk
+                                                </label>
+                                            </div>
+
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                            </div>
+
+                            <div class="govuk-form-group">
+                                <label class="govuk-label" for="marketplace-25">
+                                    Other marketplaces
+                                </label>
+                                <input class="govuk-input" id="marketplace-25" name="marketplace-25" type="text">
+                            </div>
+
                         </div>
                     </div>
                 </fieldset>
@@ -587,28 +768,6 @@ Edit the product recall information
                     Lorem ipsum consectetur
                 </p>
             </div>
-
-
-
-
-
-
-            <!--
-                sumbit hidden inputs to next page incase user returns to this page to make more edits
-            -->
-
-
-
-
-            <!--div class="govuk-form-group govuk-!-margin-top-9 govuk-!-padding-top-4 opss-border-top">
-                <p class="govuk-body-s">
-                    Continue to the next page where a <abbr>PDF</abbr> copy is created <br class="opss-br-desktop">and the information is formatted in Markdown.
-                </p>
-
-                <button class="govuk-button">
-                    Continue
-                </button>
-            </div-->
 
             <div class="govuk-form-group govuk-!-margin-top-9">
                 <button class="govuk-button">
