--- a/app/views/recall/end-pg-reload.html
+++ b/app/views/recall/end-pg-reload.html
@@ -26,9 +26,12 @@ Formatted product recall information
                 Dyson Extreme Clean product [the PDF title]
             </h2>
 
-            <!-- important to add the 'download attribute' even if we have to add an ID and dynamically add it using JS (which is better than nothing); see JS below -->
-            <p class="govuk-body-s">
-                <a href="../public/pdfs/2211-0150-product-recall-women_s-shoes.pdf" class="govuk-link govuk-link--no-visited-state opss-download-link-m" target="_self" download="download">Download the <abbr>PDF</abbr></a>
+            <p class="govuk-body-s govuk-!-padding-bottom-0">
+                The creation of the <abbr>PDF</abbr> has not completed yet. Reload this page to check again.
+
+                <span class="govuk-!-display-block govuk-!-margin-top-4">
+                    <button class="govuk-!-font-size-16 opss-button-link opss-button-refresh">Reload the page</button> <!-- or input type="button" -->
+                </span>
             </p>
         </section>
 
