--- a/app/views/recall/start-pg.html
+++ b/app/views/recall/start-pg.html
@@ -32,7 +32,7 @@ Edit the Product Recalls and Alerts information
     <div class="govuk-grid-column-three-quarters">
 
         <p class="govuk-body">
-            This tool provides a convenient process for porting information from the <abbr>PSD</abbr> to the Product Recalls and Alerts digital service. It will generate a <abbr title="Portable Document Format">PDF</abbr> version (with product images) and you can add or edit information before transforming it into the required Markdown format, ready to &lsquo;copy and paste&rsquo; directly into the recall service.
+            This tool provides a convenient process for porting information from the <abbr>PSD</abbr> to the Product Recalls and Alerts digital service. It will generate a <abbr title="Portable Document Format">PDF</abbr> (with product images) and you can add or edit information before transforming it into the required Markdown format, ready to &lsquo;copy and paste&rsquo; directly into the recall service.
         </p>
 
 
