--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -1,9 +1,12 @@
-// $opss-error-colour: #d4351c;
 @mixin down-load-link($color, $size) {
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="' + $size + 'px" viewBox="0 0 24 24" width="' + $size + 'px" fill="' + $color + '"><g><rect fill="none" height="' + $size + '" width="' + $size + '"/></g><g><path d="M18,15v3H6v-3H4v3c0,1.1,0.9,2,2,2h12c1.1,0,2-0.9,2-2v-3H18z M17,11l-1.41-1.41L13,12.17V4h-2v8.17L8.41,9.59L7,11l5,5 L17,11z"/></g></svg> ');
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="' + $size + 'px" viewBox="0 0 24 24" width="' + $size + 'px" fill="' + $color + '"><g><rect fill="none" height="' + $size + '" width="' + $size + '"/></g><g><path d="M18,15v3H6v-3H4v3c0,1.1,0.9,2,2,2h12c1.1,0,2-0.9,2-2v-3H18z M17,11l-1.41-1.41L13,12.17V4h-2v8.17L8.41,9.59L7,11l5,5 L17,11z"/></g></svg>');
   background-position: center;
   background-repeat: no-repeat;
   display: inline-block;
+}
+
+@mixin refresh-link($color, $size) {
+  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="' + $size + '" height="' + $size + '" viewBox="0 0 24 24"><path d="M13.5 2c-5.629 0-10.212 4.436-10.475 10h-3.025l4.537 5.917 4.463-5.917h-2.975c.26-3.902 3.508-7 7.475-7 4.136 0 7.5 3.364 7.5 7.5s-3.364 7.5-7.5 7.5c-2.381 0-4.502-1.119-5.876-2.854l-1.847 2.449c1.919 2.088 4.664 3.405 7.723 3.405 5.798 0 10.5-4.702 10.5-10.5s-4.702-10.5-10.5-10.5z" fill="' + $color + '"/></svg>');
 }
 
 @function calculaterem($s) {
@@ -865,6 +868,15 @@ div[class$="inset-text"] > ol li:last-child {
   background-position-y: center;
   background-size: 25px 25px;
   background-repeat: no-repeat;
+}
+
+input[type="button"].opss-button-refresh,
+button.opss-button-refresh {
+  @include refresh-link(rgb($govuk-link-colour, .9), 18);
+  background-position-x: 0;
+  background-position-y: 0;
+  background-size: 18px 18px;
+  padding-left: 24px;
 }
 
 .opss-details-img {
