--- a/app/views/recall/select-image-pg.html
+++ b/app/views/recall/select-image-pg.html
@@ -25,43 +25,43 @@ Select the image to include
                         No images are available. You must first add an image to the <abbr>PSD</abbr> product record, or you can 'Skip' this page.
                     </p-->
 
-                    <div class="govuk-radios opss-radios-thumbnails">
+                    <div class="govuk-checkboxes opss-checkboxes-thumbnails">
 
-                        <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="image-1" name="image" type="radio" value="government-gateway" aria-describedby="image-1-hint">
-                            <label class="govuk-label govuk-radios__label" for="image-1">
+                        <div class="govuk-checkboxes__item">
+                            <input class="govuk-checkboxes__input" id="image-1" name="image-1" type="radio" value="government-gateway" aria-describedby="image-1-hint">
+                            <label class="govuk-label govuk-label govuk-checkboxes__label" for="image-1">
                                 Asda window cleaner <!-- 1. image title. -->
                             </label>
-                            <div id="image-1-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16">
+                            <div id="image-1-hint" class="govuk-hint govuk-checkboxes__hint govuk-!-font-size-16">
                                 <!-- 2. image description. 3. image file name-->
-                                Image shows the window cleaner bottle and label. <br><code title="Image file name">asda-window-cleaner.png</code>.
+                                Image shows the window cleaner bottle and label. <br><code title="Image file name">asda-window-cleaner.png</code>
                             </div>
 
-                            <div class="opss-radios-thumbnails_img" style="background-image: url('../public/images/asda-window-cleaner.png');"></div>
+                            <div class="opss-checkboxes-thumbnails_img" style="background-image: url('../public/images/asda-window-cleaner.png');"></div>
                         </div>
 
-                        <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="image-2" name="image" type="radio" value="government-gateway" aria-describedby="image-2-hint">
-                            <label class="govuk-label govuk-radios__label" for="image-2">
+                        <div class="govuk-checkboxes__item">
+                            <input class="govuk-checkboxes__input" id="image-2" name="image-2" type="radio" value="government-gateway" aria-describedby="image-2-hint">
+                            <label class="govuk-label govuk-checkboxes__label" for="image-2">
                                 Asda wood floor cleaner
                             </label>
-                            <div id="image-2-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quisquam distinctio odio dolorem accusantium aspernatur natus nesciunt labore delectus obcaecati vero nostrum suscipit asperiores numquam veniam ex consequuntur, voluptatum perferendis? <br><code title="Image file name">asda-wood-floor-cleaner.png</code>.
+                            <div id="image-2-hint" class="govuk-hint govuk-checkboxes__hint govuk-!-font-size-16">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quisquam distinctio odio dolorem accusantium aspernatur natus nesciunt labore delectus obcaecati vero nostrum suscipit asperiores numquam veniam ex consequuntur, voluptatum perferendis? <br><code title="Image file name">asda-wood-floor-cleaner.png</code>
                             </div>
 
-                            <div class="opss-radios-thumbnails_img" style="background-image: url('../public/images/asda-wood-floor-cleaner.png');"></div>
+                            <div class="opss-checkboxes-thumbnails_img" style="background-image: url('../public/images/asda-wood-floor-cleaner.png');"></div>
                         </div>
 
-                        <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="image-3" name="image" type="radio" value="government-gateway" aria-describedby="image-3-hint">
-                            <label class="govuk-label govuk-radios__label" for="image-3">
+                        <div class="govuk-checkboxes__item">
+                            <input class="govuk-checkboxes__input" id="image-3" name="image-3" type="radio" value="government-gateway" aria-describedby="image-3-hint">
+                            <label class="govuk-label govuk-checkboxes__label" for="image-3">
                                 Dishwashing liquid
                             </label>
-                            <div id="image-3-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quisquam distinctio odio dolorem accusantium aspernatur natus nesciunt labore delectus obcaecati vero nostrum suscipit asperiores numquam veniam ex consequuntur, voluptatum perferendis? <br><code title="Image file name">dishwashing-liquid.jpg</code>.
+                            <div id="image-3-hint" class="govuk-hint govuk-checkboxes__hint govuk-!-font-size-16">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quisquam distinctio odio dolorem accusantium aspernatur natus nesciunt labore delectus obcaecati vero nostrum suscipit asperiores numquam veniam ex consequuntur, voluptatum perferendis? <br><code title="Image file name">dishwashing-liquid.jpg</code>
                             </div>
 
-                            <div class="opss-radios-thumbnails_img" style="background-image: url('../public/images/dishwashing-liquid.jpg');"></div>
+                            <div class="opss-checkboxes-thumbnails_img" style="background-image: url('../public/images/dishwashing-liquid.jpg');"></div>
                         </div>
 
                     </div>
