--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -719,3 +719,37 @@ noscript {
   text-align: center;
   display: block;
 }
+
+.opss-breadcrumbs-row {
+  margin-top: - govuk-spacing(8);
+
+  .opss-status-strap {
+    width: 100%;
+
+    strong {
+      background-color: govuk-colour("orange");
+    }
+  }
+}
+
+.opss-tag-status {
+  @include opss-font-size($s: 14px, $l: 1.3);
+
+  &.opss-tag-status--draft {
+    // background-color: govuk-colour("orange");
+    // background-color: govuk-shade(govuk-colour("orange"), 23%);//4.46:1
+    background-color: govuk-colour("bright-purple");
+  }
+
+  &.opss-tag-status--notify {
+    background-color: govuk-colour("bright-purple");
+  }
+
+  &.opss-tag-status--open {
+    background-color: govuk-colour("green");
+  }
+
+  &.opss-tag-status--closed {
+    background-color: govuk-colour("black");
+  }
+}
