--- a/app/views/recall/end-pg.html
+++ b/app/views/recall/end-pg.html
@@ -38,7 +38,7 @@ Formatted product recall information
                 The formatted Markdown
             </h2>
 
-            <div class="govuk-hint govuk-!-font-size-16 govuk-!-margin-bottom-3" id="markdown-hint">
+            <div class="govuk-hint govuk-!-margin-bottom-3" id="markdown-hint">
                 You can edit the Markdown and &lsquo;copy&rsquo; <span class="opss-nojs-hide">it to your device's clipboard ready to &lsquo;paste&rsquo;</span> it into the recall site.
             </div>
 
