--- a/app/views/recall/index.html
+++ b/app/views/recall/index.html
@@ -376,19 +376,19 @@ href: "products"
         </p>
 
 
-        <div class="govuk-!-margin-top-9 opss-grouping">
+        <div class="govuk-!-margin-top-9 govuk-!-padding-bottom-1 opss-grouping">
             <h3 id="source" class="govuk-heading-m opss-grouping__heading-m">
                 Product recall and alerts site
             </h3>
 
-            <p class="govuk-body">This product record is included in one or more cases with:</p>
+            <p class="govuk-body-s">This product record is included in one or more cases with:</p>
 
-            <ul class="govuk-list govuk-list--bullet">
+            <ul class="govuk-list govuk-list--bullet govuk-!-font-size-16">
                 <li>a risk level set to high or serious</li>
                 <li>a product recall corrective action</li>
             </ul>
 
-            <p class="govuk-body">You can format the information required to add this product to the product recall and alerts site using the <a href="start-pg.html" class="govuk-link govuk-link--no-visited-state" target="_blank">product recall formatting tool</a> (Opens in a new tab).</p>
+            <p class="govuk-body-s">You can format the information required to add this product to the product recall and alerts site using the <a href="start-pg.html" class="govuk-link govuk-link--no-visited-state" target="_blank">product recall formatting tool</a> (Opens in a new tab).</p>
         </div>
 
     </section>
