--- a/app/views/recall/start-pg.html
+++ b/app/views/recall/start-pg.html
@@ -76,6 +76,10 @@ Edit the Product Recalls and Alerts information
             </a>
         </div>
 
+        <p class="govuk-body-s">
+            This digital service uses a &lsquo;friendly&rsquo; <abbr title="Uniform Resource Locator - web address">URL</abbr> which enables you to change the product record number directly in the browser address bar to load a different record.
+        </p>
+
     </div>
 </div>
 
