--- a/app/views/psd-revised-flow/online-sales/inc_retail-and-online-error.html
+++ b/app/views/psd-revised-flow/online-sales/inc_retail-and-online-error.html
@@ -19,7 +19,7 @@
 </div>
 
 <div class="govuk-radios__item">
-  <input id="business_type_online_2" name="business[type]" type="radio" value="online-fbm" class="govuk-radios__input" aria-describedby="business_type_online_2-hint" data-aria-controls="marketplaces">
+  <input id="business_type_online_2" name="business[type]" type="radio" value="online-fbm" class="govuk-radios__input" aria-describedby="business_type_online_2-hint" data-aria-controls="marketplaces" checked>
 
   <label class="govuk-label govuk-radios__label" for="business_type_online_2">Online marketplace</label>
 
@@ -27,4 +27,4 @@
     Online platforms whose primary business is connecting traders and consumers and hosting third party sellers/sales.
   </div>
 </div>
-{% include "../../recall/inc_online-marketplaces.html" %}
+{% include "../../recall/inc_online-marketplaces-error.html" %}
