--- a/app/views/recall/select-image-pg.html
+++ b/app/views/recall/select-image-pg.html
@@ -26,12 +26,13 @@ Select the image to include
                     </p-->
 
                     <div class="govuk-checkboxes opss-checkboxes-thumbnails">
-
                         <div class="govuk-checkboxes__item">
-                            <input class="govuk-checkboxes__input" id="image-1" name="image-1" type="radio" value="government-gateway" aria-describedby="image-1-hint">
+                            <input class="govuk-checkboxes__input" id="image-1" name="image-1" type="checkbox" value="government-gateway" aria-describedby="image-1-hint">
+
                             <label class="govuk-label govuk-label govuk-checkboxes__label" for="image-1">
                                 Asda window cleaner <!-- 1. image title. -->
                             </label>
+
                             <div id="image-1-hint" class="govuk-hint govuk-checkboxes__hint govuk-!-font-size-16">
                                 <!-- 2. image description. 3. image file name-->
                                 Image shows the window cleaner bottle and label. <br><code title="Image file name">asda-window-cleaner.png</code>
@@ -41,7 +42,7 @@ Select the image to include
                         </div>
 
                         <div class="govuk-checkboxes__item">
-                            <input class="govuk-checkboxes__input" id="image-2" name="image-2" type="radio" value="government-gateway" aria-describedby="image-2-hint">
+                            <input class="govuk-checkboxes__input" id="image-2" name="image-2" type="checkbox" value="government-gateway" aria-describedby="image-2-hint">
                             <label class="govuk-label govuk-checkboxes__label" for="image-2">
                                 Asda wood floor cleaner
                             </label>
@@ -53,7 +54,7 @@ Select the image to include
                         </div>
 
                         <div class="govuk-checkboxes__item">
-                            <input class="govuk-checkboxes__input" id="image-3" name="image-3" type="radio" value="government-gateway" aria-describedby="image-3-hint">
+                            <input class="govuk-checkboxes__input" id="image-3" name="image-3" type="checkbox" value="government-gateway" aria-describedby="image-3-hint">
                             <label class="govuk-label govuk-checkboxes__label" for="image-3">
                                 Dishwashing liquid
                             </label>
