align online marketplace correctly

--- a/app/views/recall/inc_online-marketplaces-error.html
+++ b/app/views/recall/inc_online-marketplaces-error.html
@@ -1,4 +1,4 @@
-<fieldset class="govuk-fieldset" aria-describedby="online-marketplace-error">
+<fieldset class="govuk-fieldset govuk-!-display-inline-block" aria-describedby="online-marketplace-error">
 
   <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="marketplaces">
 
