--- a/app/views/recall/inc_online-marketplaces.html
+++ b/app/views/recall/inc_online-marketplaces.html
@@ -1,4 +1,4 @@
-<fieldset class="govuk-fieldset">
+<fieldset class="govuk-fieldset govuk-!-display-inline-block">
 
   <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="marketplaces">
     <div class="govuk-form-group govuk-!-margin-bottom-0">
