text update to online seller button

--- a/app/views/psd-revised-flow/online-sales/type-of-business.html
+++ b/app/views/psd-revised-flow/online-sales/type-of-business.html
@@ -87,7 +87,7 @@ href: "/cases/2303-0044"
       </div>
 
 
-      <input type="submit" name="commit" value="Continue" class="govuk-button" data-disable-with="Continue" />
+      <input type="submit" name="commit" value="Continue" class="govuk-button" data-disable-with="Save and continue" />
     </form>
 
   </div>
