splash page updates

--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -726,6 +726,10 @@ ul.opss-left-nav {
 
 a.opss-secondary-text sup[class$="font-size-14"] {
   color: $govuk-secondary-text-colour;
+} 
+
+.opss-body-inverse {
+  color: govuk-colour("white");
 }
 
 div[class$="inset-text"] > ol li:last-child {
