--- a/app/views/psd-general/splash-1.html
+++ b/app/views/psd-general/splash-1.html
@@ -38,19 +38,19 @@ Product Safety Database
             Report, track and share product safety information with the product safety community.
           </p>
 
-          <p class="govuk-body app-body--inverted">
+          <p class="govuk-body opss-body-inverse">
 
             <span class="govuk-!-display-block govuk-!-margin-bottom-5">
-              <a class="govuk-link govuk-link--inverse govuk-!-font-size-27" href="/sign-in">
+              <a class="govuk-button govuk-link--inverse govuk-!-font-size-27 govuk-!-font-weight-bold" href="/sign-in">
                 Sign in to your account
-                <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+                <svg class="govuk-button__start-icon govuk-!-display-none-print" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
                   <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
                 </svg>
               </a>
             </span>
 
             <span class="govuk-!-display-block">
-              or <a href="mailto:opss.enquiries@beis.gov.uk" class="govuk-link govuk-link--inverse">email OPSS</a> if you think you should have access. <!-- fullstop! + 'inverse' class -->
+              or <a href="mailto:opss.enquiries@beis.gov.uk" class="govuk-link govuk-link--inverse">email OPSS</a> if you think you should have access. <!-- fullstop! + 'gov inverse' class -->
             </span>
 
           </p>
