splash pg update

--- a/app/views/psd-general/splash-2.html
+++ b/app/views/psd-general/splash-2.html
@@ -1,4 +1,4 @@
-{% extends "layout-basic.html" %}
+{% extends "layout-01.html" %}
 
 {% block pageTitle %}
 Product Safety Database
@@ -8,7 +8,8 @@ Product Safety Database
 
 {% block content %}
 
-<div class="app-masthead app-inverted app-inverted--masthead">
+<!-- filthy inline style hack just for this proto page as template is out of sync -->
+<div class="app-masthead app-inverted app-inverted--masthead" style="top: -50px; position: relative;">
   <div class="govuk-width-container">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
