--- a/app/views/recall/inc_online-marketplaces.html
+++ b/app/views/recall/inc_online-marketplaces.html
@@ -11,7 +11,7 @@
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="marketplace-1" name="market" type="radio" value="marketplace-1">
               <label class="govuk-label govuk-radios__label" for="marketplace-1">
-                Amazon.co.uk
+                amazon.co.uk
               </label>
             </div>
             <div class="govuk-radios__item">
